--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,4 @@ jobs:
             sudo docker stop wyze-ecommerce
             sudo docker rm wyze-ecommerce
             sudo docker build -t wyze-ecommerce .
-            sudo docker run -d -p 2005:3005 wyze-ecommerce
+            sudo docker run -d --name wyze-ecommerce -p 2005:3005 wyze-ecommerce
