chore: update frontend dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,17 @@
 FROM node:24-alpine
 
-WORKDIR  /app
+WORKDIR /app
 
-COPY ["package*.json ./", "yarn.lock ./"]
-RUN yarn
+# Copy package files and install dependencies
+COPY package.json yarn.lock ./
+RUN yarn install --frozen-lockfile
 
+# Copy all source code
 COPY . .
+
+# Build the project (if applicable)
 RUN yarn build
 
+# Start the app
 CMD ["yarn", "start"]
+
