chore: update frontend dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,7 @@ FROM node:24-alpine
 WORKDIR /app
 
 # Install some stuff
-npm install -g pnpm
+RUN npm install -g pnpm
 
 # Copy package files and install dependencies
 COPY package.json pnpm-lock.yaml ./
